# GreedyBear

./: .coverage  .coveragerc  .dockerignore  .env_template  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  EXTRACTION_PROCESS.md  FEEDS_LICENSE.md  LICENSE  README.dev.md  README.md  TOR_EXIT_NODES.md  fix-missing-rel-attributes.patch  gb-ctl  gbctl  gsoc_code_study.md  installer_on_tpot.sh  manage.py  package-lock.json  packages.txt  prototype_558.py  prototype_558_elastic.py  pyproject.toml  requirements.txt  start  test-requirements.txt  test_elastic_memory.py
.github/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  README.md  dependabot.yml  legal_notice.md  pull_request_template.md  release_template.md
.github/PULL_REQUEST_TEMPLATE/: release_template.md
.github/workflows/: Create codeql-analysis.yml  README.md  _detect_changes.yml  _node.yml  _python.yml  _release_and_tag.yml  codeql-analysis.yml  create_apt_cache.yaml  create_python_cache.yaml  dependency_review.yml  pull_request_automation.yml  release.yml  sphinx_build_on_release.yml  twitter_publish.yml
.github2/: CHANGELOG.md
.github2/workflows/: codeql-analysis.yml
.github_copy/: CHANGELOG.md  pull_request_template.md
actions/apt_requirements/: action.yml
actions/services/: action.yml
api/: admin.py  apps.py  auth.py  enums.py  serializers.py  throttles.py  urls.py  views.py
api/auth/: urls.py  views.py
api/views/: __init__.py  command_sequence.py  cowrie_session.py  enrichment.py  feeds.py  general_honeypot.py  health.py  honeypots.py  news.py  payload.py  statistics.py  utils.py
authentication/: admin.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
configuration/: cron_config.json  ml_config.json
configuration/gunicorn/: config.py
configuration/nginx/: django_server.conf  errors.conf  http.conf  https.conf  locations.conf
configuration/uwsgi/: greedybear.ini
configurations/python_linters/: requirements-linters.txt
docker/: .version  Dockerfile  Dockerfile_nginx  ci.override.yml  default.yml  elasticsearch.yml  entrypoint_gunicorn.sh  entrypoint_qcluster.sh  entrypoint_uwsgi.sh  env_file_app_ci  env_file_postgres_template  env_file_template  healthcheck_uwsgi.sh  https.override.yml  local.override.yml  local.yml  recaptcha.override.yml  stag.override.yml  version.override.yml  wait-for-it.sh  watchman_install.sh
docker/hooks/: build  post_push
docker/logrotate/: application  docker  nginx
docs/source/: Contribute.md  Installation.md  Introduction.md  OpenAPI.rst  OpenApi.rst  Redoc.rst  Usage.md  conf.py  index.rst  schema.yaml  schema.yml
frontend/: .eslintrc.json  .gitignore  .prettierrc  .stylelintrc  README.md  babel.config.js  eslint.config.mjs  index.html  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js  vitest.setup.js
frontend/public/: index.html  manifest.json  news.json
frontend/src/: App.js  App.jsx  index.js  index.jsx
frontend/tests/: environmentMock.js  test-setup.js
greedybear/: admin.py  apps.py  celery.py  checks.py  consts.py  crons.py  enums.py  models.py  ntfy.py  regex.py  schema_extensions.py  serializers.py  settings.py  signals.py  slack.py  spectacular.py  tasks.py  trending_utils.py  urls.py  utils.py  version.py  wsgi.py
greedybear/cronjobs/: abuseipdb_feed.py  attacks.py  base.py  basic_enrichment.py  bucket_cleanup.py  bucket_utils.py  cleanup.py  client.py  cowrie.py  credential_reuse.py  db_backup.py  extract.py  firehol.py  general.py  honeypots.py  http_client.py  ip_enrichment.py  log4pot.py  mass_scanners.py  monitor_honeypots.py  monitor_logs.py  reverse_dns.py  schedules.py  sensors.py  spamhaus_drop.py  threatfox_feed.py  tor_exit_nodes.py  trending.py  whatsmyip.py
greedybear/extraction/: extraction_pipeline.py  ioc_processor.py  utils.py
greedybear/migrations/: 0001_initial.py  0002_ioc_cowrie.py  0003_statistics.py  0004_alter_id_field.py  0004_rename_date_statistics_request_date.py  0005_clients.py  0006_ioc_general_hps.py  0007_generalhoneypot.py  0008_auto_20230120_1548.py  0009_alter_ioc_general_field.py  0010_alter_ioc_related_ioc.py  0011_ioc_asn_ioc_destination_ports_ioc_ip_reputation_and_more.py  0011_rename_times_seen_ioc_attack_count_ioc_asn_and_more.py  0012_auto_20241213_1743.py  0013_ioc_greedybear__name_b54897_idx.py  0014_auto_20250210_1258.py  (+117 more)
gui/: admin.py  apps.py  urls.py
hooks/: build
logrotate/: django  nginx
requirements/: dev-requirements.txt  docs-requirements.txt  project-requirements.txt  requirements.txt  test-requirements.txt  test.txt
tests/: __init__.py  test_abuseipdb.py  test_as_repo.py  test_asn_repo.py  test_basic_enrichment.py  test_cache_signals.py  test_client.py  test_clustering.py  test_cowrie_credential.py  test_cowrie_credentials.py  test_cowrie_extraction.py  test_cowrie_session_repository.py  test_credential_reuse.py  test_elastic_repository.py  test_enrichment.py  test_extraction.py  test_extraction_strategies.py  test_extraction_utils.py  test_firehol_repository.py  test_heralding_strategy.py  test_http_client.py  test_ioc_enrichment.py  test_ioc_processor.py  test_ioc_repository.py  test_ip_enrichment.py  test_lsh.py  test_mass_scanner_repository.py  test_mass_scanners.py  test_migrations.py  test_models.py  test_ntfy.py  test_repositories.py  test_reverse_dns.py  test_rf_config.py  test_rf_models.py  test_runner.py  test_scoring_utils.py  test_sensor_repository.py  test_serializers.py  test_slack.py  (+11 more)
workflows/: pull_request_automation.yml
(+259 files in other folders)
