[project]
name = "greedybear"
version = "3.4.0"
description = "Threat intelligence platform that extracts attack data from a T-Pot or a cluster of them and generates actionable live feeds."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13,<3.14"
dependencies = [
    # Django core
    "Django~=5.2.13",
    "djangorestframework~=3.17.1",
    "django-rest-email-auth==5.0.0",
    "django-ses~=4.7",
    "django-q2~=1.9",
    "croniter~=6.2",
    "certego-saas==0.7.12",
    # Server Gateway Interface
    "gunicorn~=25.3",
    # Data stores
    "elasticsearch==9.3.0",
    "psycopg[c]~=3.3",
    # ML / data science
    "scikit-learn~=1.8.0",
    "pandas~=3.0",
    "numpy~=2.4",
    "joblib~=1.5",
    "datasketch~=1.10",
    # File Format Support
    "feedparser~=6.0",
    "stix2~=3.0",
    # Utilities
    "requests~=2.33",
    "slack-sdk~=3.41",
]

[project.urls]
Repository = "https://github.com/GreedyBear-Project/GreedyBear"
Documentation = "https://github.com/GreedyBear-Project/GreedyBear/wiki"
Blog = "https://greedybear-project.github.io/"

[dependency-groups]
dev = [
    "django-watchfiles~=1.4",
]
test = [
    "coverage==7.13.5",
    "django-test-migrations==1.5.0",
]
lint = [
    "ruff==0.15.11",
]

[tool.uv]
# necessary because certego-saas transitively depends on djangorestframework-filters 1.0.0.dev2 (dev prerelease)
prerelease = "allow"
# necessary because certego-saas pins Markdown <3.4, but we want a current release for security fixes
override-dependencies = ["markdown==3.10.2"]

[tool.ruff]
extend-exclude = [
    ".github",
    ".idea",
    ".vscode",
    ".venv",
    "venv",
    "**/migrations/*",
]
include = ["*.py"]
indent-width = 4
line-length = 160
output-format = "full"
respect-gitignore = false
show-fixes = true
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "FLY", # flynt
    "I",   # isort
    "ICN", # flake8-import-conventions
    "LOG", # flake8-logging
    "N",   # pep8-naming
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
# Re-exporting submodules with wildcard imports is intentional in package __init__.py files
"**/__init__.py" = ["F403"]
# Long parameter documentation lines in API view docstrings
"api/views/*" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = [
    "api",
    "authentication",
    "configuration",
    "greedybear",
]
